[package]
name = "egui-command"
version = "0.1.1"
edition = "2024"
description = "Pure command model for egui apps — no egui dependency"
license = "MIT OR Apache-2.0"
keywords = ["egui", "command", "command-pattern", "ui", "gui"]
categories = ["gui", "data-structures"]

[dependencies]
rustc-hash = "2"
